--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "serverapi"
 version = "0.1.0"
 requires-python = ">=3.10,<4"
-dependencies = ["fastapi (>=0.115.8,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)", "loguru (>=0.7.3,<0.8.0)", "tortoise-orm (>=0.24.0,<0.25.0)", "python-dotenv (>=1.0.1,<2.0.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "ujson (>=5.10.0,<6.0.0)", "aiomysql (>=0.2.0,<0.3.0)"]
+dependencies = ["fastapi (>=0.115.8,<0.116.0)", "uvicorn (>=0.34.0,<0.35.0)", "loguru (>=0.7.3,<0.8.0)", "tortoise-orm (>=0.24.0,<0.25.0)", "python-dotenv (>=1.0.1,<2.0.0)", "pydantic-settings (>=2.7.1,<3.0.0)", "ujson (>=5.10.0,<6.0.0)", "aiomysql (>=0.2.0,<0.3.0)", "mcstatus (>=11.1.1,<12.0.0)"]
 
 
 [tool.ruff.lint]
