--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+aioboto3==13.4.0
+aiobotocore==2.18.0
+aiofiles==24.1.0
+aiohappyeyeballs==2.4.6
+aiohttp==3.11.12
+aioitertools==0.12.0
 aiomysql==0.2.0
+aiosignal==1.3.2
 aiosqlite==0.20.0
 annotated-types==0.7.0
 anyio==4.8.0
+async-timeout==5.0.1
 asyncio-dgram==2.2.0
+attrs==25.1.0
 bcrypt==4.2.1
+boto3==1.36.1
+botocore==1.36.1
 certifi==2025.1.31
 click==8.1.8
 dnspython==2.7.0
@@ -11,6 +22,7 @@ email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.115.8
 fastapi-cli==0.0.7
+frozenlist==1.5.0
 h11==0.14.0
 httpcore==1.0.7
 httptools==0.6.4
@@ -19,13 +31,16 @@ idna==3.10
 iso8601==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
+jmespath==1.0.1
 loguru==0.7.3
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mcstatus==11.1.1
 mdurl==0.1.2
+multidict==6.1.0
 orjson==3.10.15
 passlib==1.7.4
+propcache==0.2.1
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
 pydantic-settings==2.7.1
@@ -34,20 +49,27 @@ Pygments==2.19.1
 PyJWT==2.10.1
 PyMySQL==1.1.1
 pypika-tortoise==0.5.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2025.1
 PyYAML==6.0.2
+redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.13.2
+s3transfer==0.11.2
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 starlette==0.45.3
 tortoise-orm==0.24.0
 typer==0.15.1
 typing_extensions==4.12.2
 ujson==5.10.0
+urllib3==2.3.0
 uvicorn==0.34.0
 uvloop==0.21.0
 watchfiles==1.0.4
 websockets==15.0
+wrapt==1.17.2
+yarl==1.18.3
