--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiohappyeyeballs==2.4.6
 aiohttp==3.11.12
 aioitertools==0.12.0
 aiomysql==0.2.0
+aioredis==2.0.1
 aiosignal==1.3.2
 aiosqlite==0.20.0
 annotated-types==0.7.0
@@ -40,10 +41,10 @@ mdurl==0.1.2
 multidict==6.1.0
 orjson==3.10.15
 passlib==1.7.4
-propcache==0.2.1
+propcache==0.3.0
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
-pydantic-settings==2.7.1
+pydantic-settings==2.8.0
 pydantic_core==2.27.2
 Pygments==2.19.1
 PyJWT==2.10.1
@@ -54,7 +55,6 @@ python-dotenv==1.0.1
 python-multipart==0.0.20
 pytz==2025.1
 PyYAML==6.0.2
-redis==5.2.1
 rich==13.9.4
 rich-toolkit==0.13.2
 s3transfer==0.11.2
