--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ mdurl==0.1.2
 multidict==6.1.0
 orjson==3.10.15
 passlib==1.7.4
+pillow==11.1.0
 propcache==0.3.0
 pydantic==2.10.6
 pydantic-extra-types==2.10.2
