--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ aioitertools==0.12.0
 aiomysql==0.2.0
 aioredis==2.0.1
 aiosignal==1.3.2
+aiosmtplib==4.0.0
 aiosqlite==0.20.0
 annotated-types==0.7.0
 anyio==4.8.0
