--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ dependencies = [
     "passlib[bcrypt] (>=1.7.4,<2.0.0)",
     "pyjwt (>=2.10.1,<3.0.0)",
     "aioboto3 (>=13.4.0,<14.0.0)",
-    "aioredis (>=2.0.1,<3.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
     "aiosmtplib (>=4.0.0,<5.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
@@ -25,6 +24,8 @@ dependencies = [
     "tomlkit>=0.13.2",
     "tzdata>=2025.2",
     "argparse>=1.4.0",
+    "redlock-py>=1.0.8",
+    "redis>=5.2.1",
 ]
 
 
